--- a/css/style.sass
+++ b/css/style.sass
@@ -14,7 +14,21 @@ body
  min-width: 970px
  max-width: 1440px
  margin: 0 auto
+ font-size: 14px
 
+a,
+h3,
+p,
+button,
+.item-tags
+ text-transform: capitalize
+
+a:hover
+ text-decoration: underline
+
+h3
+ font-size: 14px
+ font-weight: normal
 // Grid - body
 .left-col
  margin-left: -100%
@@ -23,6 +37,7 @@ body
  margin-right: -100%
 .center-col
  width: 100%
+ padding-top: 10px
 .column-wrapper
  padding-left: $body-col-size
  padding-right: $body-col-size
@@ -30,7 +45,6 @@ body
  .column
   position: relative
   float: left
-  padding-top: 15px
 .left-col,
 .right-col
  padding: 0 $body-col-padding-size
@@ -55,7 +69,7 @@ body
  position: relative
  // left column logo
  #logo
-  background-image: url(../img/logo.png)
+  background-image: url(../img/logo@2x.png)
   background-size: 130px 40px
   margin: 15px 0px
   width: 130px
@@ -71,6 +85,10 @@ body
    font-size: 16px
    .user-image
     float: left
+    width: 32px
+    height: 32px
+    overflow: hidden
+    border-radius: 3px
    .user-name
     width: 180px
     display: inline-block
@@ -143,7 +161,8 @@ body
 
 .left-menu-content
  li
-  padding: 14px 0px
+  padding: 10px 0px
+  font-size: 16px
  #feed
   background: url(../img/icons/sprite-sl.png) no-repeat -4px -2px //66
   &:hover
@@ -155,7 +174,7 @@ body
  #companies
   background: url(../img/icons/sprite-sl.png) no-repeat -4px -138px
   &:hover
-   background: url(../img/icons/sprite-sl.png) no-repeat -4px -171px
+   background: url(../img/icons/sprite-sl.png) no-repeat -4px -172px
  #service
   background: url(../img/icons/sprite-sl.png) no-repeat -4px -203px
   &:hover
@@ -170,6 +189,113 @@ body
 .grey-c
  background-color: #444
 
+.advertisement-block
+ h3
+  line-height: 52px
+ p
+  font-size: 11px
+  padding-top: 5px
+  padding-bottom: 20px
 
+.category-wrap
+ //margin-bottom: 20px
+ .category-header
+  padding: 20px 0
+  h3
+   display: inline-block
+  >a
+   float: right
+ .item-content
+  position: relative
+  margin-bottom: 20px
+  .person-name
+   position: relative
+   padding: 0 0 7px
+   width: 220px
+  .item-image
+   display: inline-block
+   width: 80px
+   height: 80px
+   overflow: hidden
+   border-radius: 5px
+  a
+   font-size: 16px
+   span
+    display: block
+    position: absolute
+    top: 0
+    padding-left: 90px
+    width: 130px
+  .item-tags
+   position: absolute
+   margin-left: 90px
+   top: 22px
+   line-height: 20px
+   width: 130px
+   span
+    display: block
+   div
+    line-height: 15px
+    margin: 5px 0px 
+    overflow: hidden
+    word-wrap: break-word
+   a
+    font-size: 12px
 
+button
+ border: 1px solid transparent
+ border-radius: 5px
+ padding: 6px 20px
+ outline: none
 
+.service-header
+ line-height: 40px
+ height: 40px
+ margin-bottom: 20px
+ >a
+  font-size: 30px
+  &:hover
+   text-decoration: none
+ button
+  float: right
+  margin-top: 4px
+.service-items
+ padding: 15px 0 15px 15px
+ border-radius: 5px
+ font-size: 0
+ text-align: center
+ .service-item
+  font-size: 14px
+  display: inline-block
+  vertical-align: top
+  text-align: center
+  margin-right: 15px
+  margin-bottom: 30px
+  min-width: 134px
+  .service-img
+   display: table-cell
+   vertical-align: middle
+   width: 134px
+   height: 134px
+   min-width: 134px
+   img
+    display: inline-block
+  a
+   display: inline-block
+   margin-top: 12px
+   width: 125px
+   &:hover
+    text-decoration: none
+
+.footer
+ margin-top: 20px
+ font-size: 12px
+ a
+  display: inline-block
+  margin: 20px 20px 0 0
+
+.r
+ display: block
+ overflow: hidden
+ text-overflow: ellipsis
+ white-space: nowrap
