--- a/css/colors.sass
+++ b/css/colors.sass
@@ -13,11 +13,12 @@ $i-m-blue: #6ebadf
 $i-d-blue: #65aacd
 
 // fonts
-$f-d-grey: #59606b  //link text
-$f-m-grey: #7c8695  //body color text
+$f-d-grey: #59606b  // left menu link text
+$f-d-blue: #1c2534  // link text
+$f-m-grey: #7c8695  // body color text
 $f-l-grey: #b7bfcd  // inner tiny letters text
 $f-a-grey: #d3d3d3  // outer tiny letters text
-$f-d-green: #71973c //hover text big icons
+$f-d-green: #71973c // hover text big icons
 
 body
  color: $f-m-grey
@@ -33,8 +34,41 @@ body
   color: #fff
 
 a
- color: $f-d-grey
+ color: $f-d-blue
 
 .left-menu-content
  li
   border-bottom: 1px solid $bd-grey
+  a
+   color: $f-d-grey
+   &:hover
+    color: $f-d-green
+    text-decoration: none
+
+.advertisement-block
+ border-bottom: 1px solid $bd-grey
+ p
+  color: $f-a-grey
+
+.category-wrap
+ border-bottom: 1px solid $bd-grey
+
+.footer
+ color: $f-l-grey
+ a
+  color: $f-l-grey
+
+button
+ color: #fff
+ background-color: $bg-l-green
+
+.service-items,
+.service-img
+ border: 1px solid $bd-grey
+
+.service-item
+ &:hover
+  >.service-img
+   background-color: $bg-l-blue
+  >a
+   color: $f-d-green
