--- a/css/reset.sass
+++ b/css/reset.sass
@@ -3,7 +3,14 @@ body,
 li,
 ul,
 ol,
-a
+a,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
  margin: 0
  padding: 0
 
@@ -12,5 +19,8 @@ li
 
 a
  text-decoration: none
+
+button
+ cursor: pointer
 
 
