--- a/css/colors.sass
+++ b/css/colors.sass
@@ -61,6 +61,8 @@ a
 button
  color: #fff
  background-color: $bg-l-green
+ &:hover
+  background-color: $bg-d-green
 
 .service-items,
 .service-img
